# nilai-helper

./: .env.sample  README.md  nilai_helpers.py  pyproject.toml
examples/: healthcare-0-generate-symptoms.py  healthcare-1-define-schema.py  healthcare-2-doctor-feelgood.md  healthcare-2-doctor-feelgood.py  healthcare-3-doctor-mccoy.md  healthcare-3-doctor-mccoy.py  healthcare-4-doctor-drew.md  healthcare-4-doctor-drew.py  healthcare-X-decrypt-reports.py
testdata/: profile-and-symptoms-v1.json  profile-and-symptoms-v2.json
