[project]
name = "nilai-helper"
version = "0.0.0a1"
description = "Library for working with SecretLLM confidential agent environments."
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1.0.1",
    "bip-utils>=2.9.3",
    "py-sr25519-bindings>=0.2.1",
    "py-dotenv>=0.1",
    "langgraph==0.2.74",
    "huggingface-hub>=0.28.1",
    "transformers>=4.48.2",
    "langchain-community>=0.3.17",
    "cdp-langchain==0.0.13",
    "coinbase-agentkit @ git+https://github.com/wwwehr/agentkit.git@nillion-secretvault#subdirectory=python/coinbase-agentkit"

]

[project.urls]
Repository = "https://github.com/wwwehr/nilai-helper"

[project.optional-dependencies]
lint = [
    "pylint~=3.2.0"
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

